# Ultrawide_Window_Positioner

./: .gitignore  LICENSE_hdrcapture  README.md  README_hdrcapture.txt  README_kdotool.txt  Ultrawide_Window_Positioner_linux.spec  Ultrawide_Window_Positioner_win32.spec  hdrcapture-0.3.0-cp312-cp312-win_amd64.whl  main.py  pyproject.toml  version.txt
.github/workflows/: codeql.yml
lib/: asset_manager.py  config_manager.py  constants.py  layout.py  layout_ctk.py  utils.py  window_manager.py
src/: asset_manager.py  callbacks.py  client_secrets_example.py  config_manager.py  constants.py  layout_ctk.py  layout_pyside.py  log_handler.py  main.py  main_ctk.py  main_pyside.py  utils.py  uwp_config.py  uwp_constants.py  uwp_gui.py  uwp_logging.py  uwp_utils.py  uwp_window.py  window_manager.py
src/backend/: __init__.py  common.py  config.py  constants.py  linux_funcs.py  log_setup.py  win32_funcs.py  window.py
src/gui/: __init__.py  config_dialog.py  layout_preview.py  pyside_gui_manager.py  ui_helpers.py  workers.py
