[project]
name = "ultrawide-window-positioner"
version = "1.2.2.0"
description = "Application to manage window position, size and always-on-top status."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "global-hotkeys>=0.1.7",
    "hdrcapture",
    "psutil>=7.2.2",
    "pyside6-essentials>=6.10.2",
    "pywin32>=311",
    "roman>=5.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.uv.sources]
hdrcapture = { path = "hdrcapture-0.3.0-cp312-cp312-win_amd64.whl" }
